# omnidocs

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gitbooktopdf/: __init__.py  cli.py  converter.py  markdown_converter.py
tests/: test_cli.py  test_converter.py
